tests/neg/semantic_const_reassign.baa
// EXPECT: [Error]
// EXPECT: خطأ دلالي
// EXPECT: Cannot reassign constant
صحيح الرئيسية() {
    ثابت صحيح س = 1.
    س = 2.
    إرجع 0.
}
